rspec-tools/tests/resources/invalid-asciidoc/close_unopened_ifdef.adoc
Some description

Now we try to close and ifdef that was never opened.

endif::env-github,rspecator-view[]
